--- a/404.html
+++ b/404.html
@@ -12,12 +12,12 @@ img {
 </style>
 <head>
 	<title>404 Not Found</title>
-	<link rel="shortcut icon" href="https://lidongxun967.github.io/img/404.png">
+	<link rel="shortcut icon" href="/img/404.png">
 	<link rel="stylesheet" href="template">
 </head>
 <body>
 	<header><a href="/index.html">ldx的个人网站</a></header>
-	<img src="https://lidongxun967.github.io//img/404big.png" alt="Paris" style="width:40%">
+	<img src="/img/404big.png" alt="Paris" style="width:40%">
 	<div class="center">
 		<h1>404</h1>
 		<h2>Not Found</h2>
