--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ a:hover{ text-decoration:underline}
 <a href="/acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a></header>
 	<h1>简介</h1>
     <p>这是一个个人站点，暂时只有我一个人进行维护，接下来可能会放一些个人制作的内容。</p>
-	<p>由于本人还是学生，时间、经费不足。所以网站暂时只能用热铁盒免费托管，将来可能会升级为收费托管，或者更换托管商</p>
+	<p>PS 网站使用Github托管</p>
 </body>
 <footer>
 
