--- a/acknowledge_and_sponsor.html
+++ b/acknowledge_and_sponsor.html
@@ -22,7 +22,7 @@ a:hover{ text-decoration:underline}
 </style> 
 </head>
 <body>
-	<header><a href="/index.html">ldx的个人网站</a><a> </a><a href="/Acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a></header>
+	<header><a href="/index.html">ldx的个人网站</a></header>
 	
 	<h1>鸣谢与赞助</h1>
 	<hr>
