--- a/search.html
+++ b/search.html
@@ -4,11 +4,12 @@
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?5d0c3fe41c2bbe3cf690f26a5bf3cbf1";
+  hm.src = "https://hm.baidu.com/hm.js?de7940fbd70fa18bbcee15ad4a441273";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
 
 
 
@@ -18,8 +19,7 @@ var _hmt = _hmt || [];
 <link rel="stylesheet" href="template">
 <link rel="shortcut icon" href="favicon.ico">
 	<div class="bg-img"></div>
-    <header><a href="/index.html">ldx的个人网站</a><a> </a>
-<a href="/Acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a></header>
+    <header><a href="/index.html">ldx的个人网站</a></header>
 <style> 
 
 a{ text-decoration:none} 
