--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ a:hover{ text-decoration:underline}
 <body>
 	<div class="bg-img"></div>
     <header><a href="/index.html">ldx的个人网站</a><a> </a>
-<a href="/acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a></header>
+            <a href="/acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a><a> </a>
+            <a href="/project.html">我的项目</a>
+            </header>
 	<h1>简介</h1>
     <p>这是一个个人站点，暂时只有我一个人进行维护，接下来可能会放一些个人制作的内容。</p>
 	<p>PS 网站使用Github托管</p>
