--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html>
 <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?de7940fbd70fa18bbcee15ad4a441273";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
+    var _hmt = _hmt || [];
+    (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?de7940fbd70fa18bbcee15ad4a441273";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
 </script>
 
 
 
 
 <head>
-<meta charset="utf-8">
-<title>ldx的个人网站 主站</title>
-<link rel="stylesheet" href="template">
-<link rel="shortcut icon" href="favicon.ico">
-<style> 
+    <meta charset="utf-8">
+    <title>ldx的个人网站 主站</title>
+    <link rel="stylesheet" href="template">
+    <link rel="shortcut icon" href="favicon.ico">
+    <style>
+        a {
+            text-decoration: none
+        }
 
-a{ text-decoration:none} 
-
-a:hover{ text-decoration:underline}
-
-</style> 
+        a:hover {
+            text-decoration: underline
+        }
+    </style>
 </head>
+
 <body>
-	<div class="bg-img"></div>
+    <div class="bg-img"></div>
     <header><a href="/index.html">ldx的个人网站</a><a> </a>
-            <a href="/acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a><a> </a>
-            <a href="/project.html">我的项目</a>
-            </header>
-	<h1>简介</h1>
+        <a href="/acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a><a> </a>
+        <a href="/project.html">我的项目</a>
+    </header>
+    <h1>简介</h1>
     <p>这是一个个人站点，暂时只有我一个人进行维护，接下来可能会放一些个人制作的内容。</p>
-	<p>PS 网站使用Github托管</p>
+    <p>PS 网站使用Github托管</p>
 </body>
 <footer>
 
 </footer>
+
 </html>
