--- a/project.html
+++ b/project.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html>
 <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?de7940fbd70fa18bbcee15ad4a441273";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
+  var _hmt = _hmt || [];
+  (function () {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?de7940fbd70fa18bbcee15ad4a441273";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+  })();
 </script>
 
 
 
 
 <head>
-<meta charset="utf-8">
-<title>ldx的个人网站 我的项目</title>
-<link rel="stylesheet" href="template">
-<link rel="shortcut icon" href="favicon.ico">
-	<div class="bg-img"></div>
-    <header><a href="/index.html">ldx的个人网站</a></header>
-<style> 
+  <meta charset="utf-8">
+  <title>ldx的个人网站 我的项目</title>
+  <link rel="stylesheet" href="template">
+  <link rel="shortcut icon" href="favicon.ico">
+  <div class="bg-img"></div>
+  <header><a href="/index.html">ldx的个人网站</a></header>
+  <style>
+    a {
+      text-decoration: none
+    }
 
-a{ text-decoration:none} 
-
-a:hover{ text-decoration:underline}
-
-</style> 
+    a:hover {
+      text-decoration: underline
+    }
+  </style>
 </head>
+
 <body>
 
-	<h1>简介</h1>
-	<p>这里放了一些我自己做的项目</p>
-    
+  <h1>简介</h1>
+  <p>这里放了一些我自己做的项目</p>
+  
 </body>
 <footer>
 
 </footer>
+
 </html>
