--- a/uoe/index.html
+++ b/uoe/index.html
@@ -1,18 +1,83 @@
 <html>
 <head>
 <title>UOE软件介绍</title>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+}
+.header {
+background-color: #333;
+color: white;
+text-align: center;
+padding: 20px;
+}
+
+.content {
+max-width: 600px;
+margin: auto;
+background-color: white;
+padding: 20px;
+}
+
+.content h1 {
+font-size: 2em;
+margin-bottom: 20px;
+}
+
+.content h2 {
+font-size: 1.5em;
+margin-bottom: 15px;
+color: #333;
+}
+
+.content p {
+margin-bottom: 15px;
+}
+
+.content ul {
+margin-bottom: 15px;
+padding: 0 20px;
+}
+
+.content ol {
+margin-bottom: 15px;
+padding: 0 20px;
+}
+
+.footer {
+text-align: center;
+padding: 20px;
+}
+
+.download-button {
+display: inline-block;
+background-color: #333;
+color: white;
+padding: 10px 20px;
+text-decoration: none;
+border-radius: 4px;
+}
+
+.download-button:hover {
+background-color: #555;
+}
+</style>
+
 </head>
 <body>
-<h1>欢迎来到UOE软件网站！</h1>
-<p>UOE是一款名为“自动打开USB设备附加驱动”的软件，它的功能是自动打开USB设备的附加驱动以此节省内存。</p>
-<h2>UOE软件的优点</h2>
-<ul>
-  <li>自动打开USB设备附加驱动，减少手动操作</li>
-  <li>节省内存，提升系统性能</li>
-  <li>简单易用，不需要计算机专业知识</li>
-</ul>
-<h2>如何使用UOE软件</h2>
-<p>使用UOE软件非常简单。只需在您的计算机上下载并安装UOE软件，然后按照软件的提示操作即可。您也可以在软件的“帮助”选项中查看详细的使用说明。</p>
-<p>感谢您使用UOE软件，我们希望您能够获得更好的体验。如果您有任何疑问或建议，请随时与我们联系。</p>
-</body>
-</html>
+<div class="header">
+  <h1>UOE软件介绍</h1>
+</div>
+<div class="content">
+  <h1>什么是UOE软件？</h1>
+  <p>UOE软件是一款能够自动打开USB设备的附加驱动的软件。它旨在通过打开附加驱动来节省内存，从而提高电脑的性能。</p>
+  <h2>UOE软件的功能</h2>
+  <ul>
+    <li>自动打开USB设备的附加驱动，节省内存。</li>
+    <li>提高电脑的性能，使其运行更快。</li>
+    <li>简单易用，支持多种语言。</li>
+    <li>免费下载，提供在线技术支持。</li>
+</div></body>
