--- a/uoe/index.html
+++ b/uoe/index.html
@@ -73,11 +73,13 @@ background-color: #555;
 </div>
 <div class="content">
   <h1>什么是UOE软件？</h1>
-  <p>UOE软件是一款能够自动打开USB设备的附加驱动的软件。它旨在通过打开附加驱动来节省内存，从而提高电脑的性能。</p>
+  <p>UOE软件是一款能够自动打开USB设备的附加驱动的软件。它旨在通过按需打开USB设备的附加驱动来节省内存，从而提高电脑的性能。</p>
   <h2>UOE软件的功能</h2>
   <ul>
     <li>自动打开USB设备的附加驱动，节省内存。</li>
     <li>提高电脑的性能，使其运行更快。</li>
-    <li>简单易用，支持多种语言。</li>
-    <li>免费下载，提供在线技术支持。</li>
+    <li>简单易用，无需编程。</li>
+    <li>免费下载，开放源码。</li>
+  </ul>
+
 </div></body>
