--- a/index.html
+++ b/index.html
@@ -55,8 +55,19 @@
     </style>
 </head>
 
+
+
+
+
 <body>
-    <div class="bg-img"></div>
+
+    <div class="header">
+        <header><a href="/index.html">ldx的个人网站</a><a> </a>
+            <a href="/acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a><a> </a>
+            <a href="/project.html">我的项目</a>
+        </header>
+      </div>
+    <div class="content"></div>
     <header><a href="/index.html">ldx的个人网站</a><a> </a>
         <a href="/acknowledge_and_sponsor.html" target="_blank">鸣谢与赞助</a><a> </a>
         <a href="/project.html">我的项目</a>
