--- a/uoe/index.html
+++ b/uoe/index.html
@@ -78,8 +78,13 @@ background-color: #555;
   <ul>
     <li>自动打开USB设备的附加驱动，节省内存。</li>
     <li>提高电脑的性能，使其运行更快。</li>
-    <li>简单易用，无需编程。</li>
+    <li>简单易用，无需学习编程。</li>
     <li>免费下载，开放源码。</li>
   </ul>
-
+  <h2>UOE设备需求：</h2>
+  <ul>
+    <li>系统：Windows 10 x86-64 或更高</li>
+    <li>内存：4G+</li>
+    <li>硬盘空闲：500MB+</li>
+  </ul>
 </div></body>
