--- a/uoe/index.html
+++ b/uoe/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>UOE软件介绍</title>
+<link rel="shortcut icon" href="box.png">
 <style>
 body {
   font-family: Arial, sans-serif;
