--- a/uoe/index.html
+++ b/uoe/index.html
@@ -77,8 +77,8 @@ background-color: #555;
   <p>UOE软件是一款能够自动打开USB设备的附加驱动的软件。它旨在通过按需打开USB设备的附加驱动来节省内存，从而提高电脑的性能。</p>
   <h2>UOE软件的功能</h2>
   <ul>
-    <li>自动打开USB设备的附加驱动，节省内存。</li>
-    <li>提高电脑的性能，使其运行更快。</li>
+    <li>在连接USB设备时自动打开本USB设备的附加驱动，节省内存。</li>
+    <li>使电脑运行更快。</li>
     <li>简单易用，无需学习编程。</li>
     <li>免费下载，开放源码。</li>
   </ul>
@@ -86,6 +86,12 @@ background-color: #555;
   <ul>
     <li>系统：Windows 10 x86-64 或更高</li>
     <li>内存：4G+</li>
+    <li>硬盘空闲：500MB+</li>
+  </ul>
+  <h2>UOE下载：</h2>
+  <ul>
+    <li>可执行（不依赖py环境）：<a href="https://github.com/lidongxun967/UOEforall">下载</a></li>
+    <li>依赖py环境：<a href="https://github.com/lidongxun967/UOE">下载</a></li>
     <li>硬盘空闲：500MB+</li>
   </ul>
 </div></body>
