--- a/acknowledge_and_sponsor.html
+++ b/acknowledge_and_sponsor.html
@@ -13,6 +13,7 @@ var _hmt = _hmt || [];
 
 
 <head>
+	<script src="https://www.google.com/recaptcha/enterprise.js?render=6LeiPngjAAAAAE5w-Sg69jdBxO_bu_d5hJf0qTs3"></script>
 	<title>ldx的个人网站 鸣谢与赞助</title>
 	<link rel="stylesheet" href="template">
 <style> 
