--- a/acknowledge_and_sponsor.html
+++ b/acknowledge_and_sponsor.html
@@ -9,7 +9,16 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-
+<script  src="https://www.google.com/recaptcha/enterprise.js?render=6LeiPngjAAAAAE5w-Sg69jdBxO_bu_d5hJf0qTs3"></script>
+<script>
+  grecaptcha.enterprise.ready(async () => {
+    const token = await grecaptcha.enterprise.execute('6LeiPngjAAAAAE5w-Sg69jdBxO_bu_d5hJf0qTs3', {action: 'homepage'});
+    // IMPORTANT: The 'token' that results from execute is an encrypted response sent by
+    // reCAPTCHA Enterprise to the end user's browser.
+    // This token must be validated by creating an assessment.
+    // See https://cloud.google.com/recaptcha-enterprise/docs/create-assessment
+  });
+</script>
 
 
 <head>
