--- a/acknowledge_and_sponsor.html
+++ b/acknowledge_and_sponsor.html
@@ -48,5 +48,6 @@ a:hover{ text-decoration:underline}
 	<p>赞助不可以退款，请三思。</p>
 	<img src="https://lidongxun967.github.io/img/zz/wx s.png">
 	<img src="https://lidongxun967.github.io/img/zz/zfb s.jpeg">
+	<a href="https://afdian.net/a/ldx967/" target="_blank">爱发电</a>
 </body>
 </html> 
