--- a/uoe/index.html
+++ b/uoe/index.html
@@ -79,7 +79,6 @@ background-color: #555;
   <ul>
     <li>在连接USB设备时自动打开本USB设备的附加驱动，节省内存。</li>
     <li>使电脑运行更快。</li>
-    <li>简单易用，无需学习编程。</li>
     <li>免费下载，开放源码。</li>
   </ul>
   <h2>UOE设备需求：</h2>
@@ -93,5 +92,9 @@ background-color: #555;
     <li>可执行（不依赖py环境）：<a href="https://github.com/lidongxun967/UOEforall">下载</a></li>
     <li>依赖py环境：<a href="https://github.com/lidongxun967/UOE">下载</a></li>
     <li>硬盘空闲：500MB+</li>
+  </ul>
+    <h2>赞助UOE：</h2>
+  <ul>
+    <li><a href="https://afdian.net/a/ldx967">爱发电地址</a></li>
   </ul>
 </div></body>
