--- a/index_new.htm
+++ b/index_new.htm
@@ -1,93 +1,148 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>个人主页</title>
-    <link rel="stylesheet" href="style.css">
+    <title>我的个人页面</title>
+    <style>
+        /* 全局样式 */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        /* 页眉样式 */
+        .header {
+            background-color: #111;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .header h1 {
+            font-size: 48px;
+            margin: 0;
+        }
+
+        .header p {
+            font-size: 18px;
+            margin: 0;
+        }
+
+        /* 导航栏样式 */
+        .nav {
+            background-color: #444;
+            color: #fff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+        }
+
+        .nav a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 18px;
+            margin-left: 20px;
+        }
+
+        /* 主要内容样式 */
+        .content {
+            margin: 20px;
+        }
+
+        .content h2 {
+            font-size: 32px;
+            margin-top: 0;
+        }
+
+        .content p {
+            font-size: 18px;
+            line-height: 1.5;
+        }
+
+        .content img {
+            max-width: 100%;
+            margin: 20px 0;
+        }
+
+        /* 页脚样式 */
+        .footer {
+            background-color: #ccc;
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .footer p {
+            margin: 0;
+            font-size: 14px;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- 头部 -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#about">关于我</a></li>
-                <li><a href="#skills">技能</a></li>
-                <li><a href="#projects">项目</a></li>
-                <li><a href="#contact">联系我</a></li>
-            </ul>
-        </nav>
+    <header class="header">
+        <h1>我的个人页面</h1>
+        <p>欢迎来到我的世界！</p>
     </header>
-    <!-- 主体 -->
-    <main>
-        <!-- 关于我 -->
-        <section id="about">
-            <div class="container">
-                <h2>关于我</h2>
-                <img src="profile.jpg" alt="我的照片">
-                <p>大家好，我是张三，一名在北京工作的Web开发者。我热衷于打造美丽、响应式的网站，以吸引用户并提高转化率。业余时间我喜欢徒步旅行、弹吉他和和家人一起度过。</p>
-            </div>
-        </section>
-        <!-- 技能 -->
-        <section id="skills">
-            <div class="container">
-                <h2>技能</h2>
-                <ul>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>JavaScript</li>
-                    <li>jQuery</li>
-                    <li>Bootstrap</li>
-                    <li>PHP</li>
-                    <li>MySQL</li>
-                </ul>
-            </div>
+    <nav class="nav">
+        <a href="#">首页</a>
+        <a href="#">关于我</a>
+        <a href="#">博客</a>
+        <a href="#">联系我</a>
+    </nav>
+
+    <main class="content">
+        <section>
+            <h2>关于我</h2>
+            <p>你好，我叫张三。我是一名位于上海的网页开发者。我热衷于创建美丽和功能性强的网站，让用户体验更愉快。在业余时间，我喜欢徒步旅行、阅读和学习新的事物。</p>
         </section>
 
-        <!-- 项目 -->
-        <section id="projects">
-            <div class="container">
-                <h2>项目</h2>
-                <div class="project">
-                    <h3>项目1</h3>
-                    <img src="project1.jpg" alt="项目1">
-                    <p>这里是项目1的简介。Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus nisl ac erat
-                        consequat, ac venenatis mauris feugiat. Aenean congue purus nec bibendum lobortis.</p>
-                </div>
-                <div class="project">
-                    <h3>项目2</h3>
-                    <img src="project2.jpg" alt="项目2">
-                    <p>这里是项目2的简介。Nulla facilisi. In quis sapien vehicula, interdum augue nec, tristique nulla. Vivamus
-                        euismod tincidunt augue, a pulvinar dolor eleifend nec.</p>
-                </div>
-            </div>
+        <section>
+            <h2>技能</h2>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node.js</li>
+            </ul>
         </section>
 
-        <!-- 联系我 -->
-        <section id="contact">
-            <div class="container">
-                <h2>联系我</h2>
-                <form action="submit-form.php" method="POST">
-                    <label for="name">姓名：</label>
-                    <input type="text" id="name" name="name" required>
+        <section>
+            <h2>作品集</h2>
+            <p>这是我最近的一些项目：</p>
+            <ul>
+                <li><a href="#">项目1</a></li>
+                <li><a href="#">项目2</a></li>
+                <li><a href="#">项目3</a></li>
+            </ul>
+        </section>
 
-                    <label for="email">邮箱：</label>
-                    <input type="email" id="email" name="email" required <label for="message">留言：</label>
-                    <textarea id="message" name="message"></textarea>
+        <section>
+            <h2>博客</h2>
+            <ul>
+                <li><a href="#">最新文章1</a></li>
+                <li><a href="#">最新文章2</a></li>
+                <li><a href="#">最新文章3</a></li>
+            </ul>
+        </section>
 
-                    <button type="submit">发送</button>
-                </form>
-            </div>
+        <section>
+            <h2>联系我</h2>
+            <p>如果你想联系我，可以通过以下方式：</p>
+            <ul>
+                <li>Email：zhangsan@example.com</li>
+                <li>电话：+86 1234567890</li>
+                <li>微信：zhangsan123</li>
+            </ul>
         </section>
     </main>
-    <!-- 底部 -->
-    <footer>
-        <div class="container">
-            <p>©2021 张三. All Rights Reserved.</p>
-        </div>
+
+    <footer class="footer">
+        <p>© 2021 张三</p>
     </footer>
 </body>
 
