--- a/index_new.htm
+++ b/index_new.htm
@@ -4,82 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>我的个人页面</title>
-    <style>
-        /* 全局样式 */
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        /* 页眉样式 */
-        .header {
-            background-color: #111;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .header h1 {
-            font-size: 48px;
-            margin: 0;
-        }
-
-        .header p {
-            font-size: 18px;
-            margin: 0;
-        }
-
-        /* 导航栏样式 */
-        .nav {
-            background-color: #444;
-            color: #fff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-        }
-
-        .nav a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 18px;
-            margin-left: 20px;
-        }
-
-        /* 主要内容样式 */
-        .content {
-            margin: 20px;
-        }
-
-        .content h2 {
-            font-size: 32px;
-            margin-top: 0;
-        }
-
-        .content p {
-            font-size: 18px;
-            line-height: 1.5;
-        }
-
-        .content img {
-            max-width: 100%;
-            margin: 20px 0;
-        }
-
-        /* 页脚样式 */
-        .footer {
-            background-color: #ccc;
-            color: #333;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .footer p {
-            margin: 0;
-            font-size: 14px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -93,7 +18,6 @@
         <a href="#">博客</a>
         <a href="#">联系我</a>
     </nav>
-
     <main class="content">
         <section>
             <h2>关于我</h2>
