--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         }
 
         .header {
-            background-color: #333;
-            color: white;
+            background-color: #ffffff;
+            color: rgb(0, 0, 0);
             padding: 20px;
         }
 
