--- a/bjgame/index.html
+++ b/bjgame/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>方块跳跃</title>
-    <style>
-        canvas {
-            border: 1px solid black;
-        }
-    </style>
+	<title>飞行射击游戏</title>
+	<style type="text/css">
+		canvas {
+			border: 1px solid black;
+		}
+	</style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="480" height="360"></canvas>
-    <script src="game.js"></script>
+	<canvas id="canvas" width="600" height="400"></canvas>
+	<script src="game.js"></script>
 </body>
 </html>
