--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body::after {
 
 
         .header {
-            background-color: #ffffff;
+            background-color: #fff9;
             color: rgb(0, 0, 0);
             padding: 20px;
         }
@@ -57,6 +57,7 @@ body::after {
 
         .content p {
             margin-bottom: 15px;
+            background-color: #fff9;
         }
 
         .content ul {
