--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body::after {
 
         .content p {
             margin-bottom: 15px;
-            background-color: #fff9;
+            background-color: #000;
         }
 
         .content ul {
