--- a/404.html
+++ b/404.html
@@ -27,5 +27,9 @@ img {
 	<hr>
 	<font size = "4">The requested URL was not found on this server.<br></font>
 	<font size = "3">你访问的页面不存在于此服务器。</font>
+	<hr>
+	<font size = "2">听会音乐：</font>
+	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 
+			src="//music.163.com/outchain/player?type=3&id=2496610808&auto=0&height=32"></iframe>
 </body>
 </html>
