--- a/pipgui/index.html
+++ b/pipgui/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Pip-GUI软件介绍</title>
-<link rel="shortcut icon" href="python.png">
+<link rel="shortcut icon" href="Python.png">
 <style>
 body {
   font-family: Arial, sans-serif;
