--- a/pipgui/index.html
+++ b/pipgui/index.html
@@ -70,7 +70,7 @@ background-color: #555;
 </head>
 <body>
 <div class="header">
-  <h1><img src="box.png" style="width:5%">Pip-GUI软件介绍</h1>
+  <h1><img src="Python.png" style="width:5%">Pip-GUI软件介绍</h1>
 </div>
 <div class="content">
   <h1>什么是Pip-GUI软件？</h1>
