--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -3,19 +3,23 @@
 
 <head>
   <meta charset="UTF-8">
-  <标题>Stronghold-Locator</标题>
+  <title>Stronghold-Locator</title>
   <style>
-    内容 {
+    body {
       font-family: Arial, sans-serif;
       background-color: #f2f2f2;
       margin: 0;
       padding: 0;
+      background-image: url('stronghold-locator.png');
+      background-repeat: no-repeat;
+      background-size: cover;
     }
     
     .container {
       max-width: 800px;
       margin: 0 auto;
       padding: 20px;
+      background-color: rgba(255, 255, 255, 0.8);
     }
     
     h1 {
@@ -48,7 +52,7 @@
       padding: 10px 20px;
       background-color: #4CAF50;
       color: #fff;
-      text-decoration: 无;
+      text-decoration: none;
       font-weight: bold;
       border-radius: 4px;
       transition: background-color 0.3s ease;
@@ -60,11 +64,10 @@
   </style>
 </head>
 
-<内容>
+<body>
   <div class="container">
     <h1>Stronghold-Locator</h1>
     <div class="feature">
-      <img src="stronghold-locator.png" alt="Stronghold-Locator" />
       <div class="feature-text">
         <h2>探索并征服</h2>
         <p>
@@ -79,7 +82,6 @@
           Stronghold-Locator利用先进的算法，根据您投掷的末影之眼，计算要塞的精确坐标。它提供实时反馈和视觉指引，确保您在广阔的Minecraft世界中不会迷失方向。
         </p>
       </div>
-      <img src="user-interface.png" alt="用户界面" />
     </div>
     <div class="feature">
       <div class="feature-text">
@@ -91,6 +93,6 @@
       </div>
     </div>
   </div>
-</内容>
+</body>
 
 </html>
