--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -25,6 +25,7 @@
     h1 {
       color: #333;
       text-align: center;
+      margin-top: 0;
     }
     
     p {
@@ -76,14 +77,9 @@
 
 <body>
   <div class="container">
-    <h1>Stronghold-Locator</h1>
-    <div class="video-container">
-      <h2>视频介绍</h2>
-      <p>视频中展示的为旧版本</p>
-      <iframe src="//player.bilibili.com/player.html?aid=399960230&bvid=BV1fo4y1776y&cid=1166432411&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
-    </div>
+    <h1><img src="icon.png" alt="Stronghold-Locator" style="width: 150%;"/></h1>
     <div class="feature">
-      <img src="user-interface.png" alt="用户界面" width="300px" />
+      <img src="user-interface.png" alt="用户界面" style="width: 300px;" />
       <div class="feature-text">
         <h2>探索并征服</h2>
         <p>
@@ -98,6 +94,12 @@
           Stronghold-Locator利用先进的算法，根据您投掷的末影之眼，计算要塞的精确坐标。它提供实时反馈和视觉指引，确保您在广阔的Minecraft世界中不会迷失方向。
         </p>
       </div>
+      <img src="user-interface.png" alt="用户界面" style="width: 450px;" />
+    </div>
+    <div class="video-container">
+      <h2>视频介绍</h2>
+      <p>视频中展示的为旧版本</p>
+      <iframe src="//player.bilibili.com/player.html?aid=399960230&bvid=BV1fo4y1776y&cid=1166432411&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
     </div>
     <div class="feature">
       <div class="feature-text">
