--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -77,9 +77,8 @@
 
 <body>
   <div class="container">
-    <h1><img src="icon.png" alt="Stronghold-Locator" style="width: 75%;"/></h1>
+    <h1><img src="icon.png" alt="Stronghold-Locator" style="width: 50%;"/><br>Stronghold-Locator</h1>
     <div class="feature">
-      <img src="user-interface.png" alt="用户界面" style="width: 300px;" />
       <div class="feature-text">
         <h2>探索并征服</h2>
         <p>
