--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Stronghold-Locator</title>
+  <link rel="icon" href="icon.png" type="image/png">
   <style>
     body {
       font-family: Arial, sans-serif;
