--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -107,7 +107,9 @@
         <p>
           准备好开始寻找要塞的冒险了吗？立即下载 Stronghold-Locator，发现隐藏在Minecraft世界中的奇迹。不要让要塞保持隐匿状态，征服它们，成为真正的冠军！
         </p>
-        <a href="https://github.com/Shrans/Stronghold-Locator/releases/" class="download-button">立即下载</a>
+        <a href="https://github.com/Shrans/Stronghold-Locator/releases" class="download-button">立即下载</a>
+        <a href="https://github.com/Shrans/Stronghold-Locator" class="download-button">Github仓库</a>
+        <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=4Ik8i55mtXmZVHy4UzSsESDt6w2vjOv9&authKey=IZ3%2BSz5lD5HT%2FlSXcKA%2B0X4J2%2BX7wWefJUWA5puxgl4M5v5BIaxWxTlGEBuMyVpE&noverify=0&group_code=874827045" class="download-button">交流Q群874827045</a>
       </div>
     </div>
   </div>
