--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -109,7 +109,13 @@
         </p>
         <a href="https://github.com/Shrans/Stronghold-Locator/releases" class="download-button">立即下载</a>
         <a href="https://github.com/Shrans/Stronghold-Locator" class="download-button">Github仓库</a>
+        <h2>作者链接</h2>
+        <p>
+          友好交流
+        </p>
         <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=4Ik8i55mtXmZVHy4UzSsESDt6w2vjOv9&authKey=IZ3%2BSz5lD5HT%2FlSXcKA%2B0X4J2%2BX7wWefJUWA5puxgl4M5v5BIaxWxTlGEBuMyVpE&noverify=0&group_code=874827045" class="download-button">交流Q群874827045</a>
+        <a href="https://space.bilibili.com/502594227" class="download-button">GUI作者</a>
+        <a href="https://space.bilibili.com/228828764" class="download-button">算法作者</a>
       </div>
     </div>
   </div>
