--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -83,7 +83,7 @@
       <div class="feature-text">
         <h2>探索并征服</h2>
         <p>
-          Stronghold-Locator是一个强大的程序，旨在帮助玩家在Minecraft游戏中找到要塞。通过1至3个末影之眼，您可以轻松定位这些隐秘的结构，并展开史诗般的冒险。
+          Stronghold-Locator是一个强大的程序，旨在帮助玩家在Minecraft游戏中找到要塞。通过1至3个末影之眼，您可以轻松定位这些隐秘的结构，并开始探索末地！
         </p>
       </div>
     </div>
@@ -91,7 +91,7 @@
       <div class="feature-text">
         <h2>高效且用户友好</h2>
         <p>
-          Stronghold-Locator利用先进的算法，根据您投掷的末影之眼，计算要塞的精确坐标。它提供实时反馈和视觉指引，确保您在广阔的Minecraft世界中不会迷失方向。
+          Stronghold-Locator利用先进的算法，根据您投掷的末影之眼，计算要塞的精确坐标。它提供结果坐标，确保您在广阔的Minecraft世界精确前往要塞。
         </p>
       </div>
       <img src="user-interface.png" alt="用户界面" style="width: 450px;" />
@@ -106,7 +106,7 @@
       <div class="feature-text">
         <h2>下载 Stronghold-Locator</h2>
         <p>
-          准备好开始寻找要塞的冒险了吗？立即下载 Stronghold-Locator，发现隐藏在Minecraft世界中的奇迹。不要让要塞保持隐匿状态，征服它们，成为真正的冠军！
+          准备好开始寻找要塞的冒险了吗？立即下载 Stronghold-Locator，发现隐藏在Minecraft世界中的奇迹。征服末地，成为真正的冠军！
         </p>
         <a href="https://github.com/Shrans/Stronghold-Locator/releases" class="download-button">立即下载</a>
         <a href="https://github.com/Shrans/Stronghold-Locator" class="download-button">Github仓库</a>
