--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -79,12 +79,6 @@
 <body>
   <div class="container">
     <h1><img src="icon.png" alt="Stronghold-Locator" style="width: 50%;"/><br>Stronghold-Locator</h1>
-    <div class="video-container">
-      <h2>视频介绍</h2>
-      <p>视频中展示的为旧版本，由于哔哩哔哩的BUG导致嵌套视频无法播放，这里附上链接</p>
-      <a href="https://www.bilibili.com/video/BV1fo4y1776y/" class="download-button">原视频</a>
-      <iframe src="//player.bilibili.com/player.html?aid=399960230&bvid=BV1fo4y1776y&cid=1166432411&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
-    </div>
     <div class="feature">
       <div class="feature-text">
         <h2>探索并征服</h2>
@@ -101,6 +95,14 @@
         </p>
       </div>
       <img src="user-interface.png" alt="用户界面" style="width: 450px;" />
+    </div>
+    <div class="feature">
+      <div class="feature-text">
+      <h2>视频介绍</h2>
+      <p>视频中展示的为旧版本，由于哔哩哔哩的BUG导致嵌套视频无法播放，这里附上链接</p>
+      <a href="https://www.bilibili.com/video/BV1fo4y1776y/" class="download-button">原视频</a>
+      <iframe src="//player.bilibili.com/player.html?aid=399960230&bvid=BV1fo4y1776y&cid=1166432411&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+    </div>
     </div>
     <div class="feature">
       <div class="feature-text">
