--- a/stronghold-locator/index.html
+++ b/stronghold-locator/index.html
@@ -45,6 +45,11 @@
       margin-right: 20px;
     }
     
+    .feature iframe {
+      width: 800px;
+      height: 450px;
+    }
+    
     .feature-text {
       flex-grow: 1;
     }
