--- a/hw.html
+++ b/hw.html
@@ -12,7 +12,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh; /* Use min-height instead of height */
       background: linear-gradient(90deg, #3498db, #2ecc71);
     }
     .hello-world-container {
