--- a/404.html
+++ b/404.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html>
-<style>
-.center {
-    text-align: center;
-}
-img {
-    display: block;
-    margin: auto;
-    width: 40%;
-}
-</style>
-<head>
-	<title>404 Not Found</title>
-	<link rel="shortcut icon" href="/img/404.png">
-	<link rel="stylesheet" href="template">
-</head>
-<body>
-	<header><a href="/index.html">ldx的个人网站</a></header>
-	<img src="/img/404big.png" alt="Paris" style="width:35%">
-	<div class="center">
-		<h1>404</h1>
-		<h2>Not Found</h2>
-	</div>
-	<div class="img">
-	</div>
-	<hr>
-	<font size = "4">The requested URL was not found on this server.<br></font>
-	<font size = "3">你访问的页面不存在于此服务器。</font>
-	<hr>
-	<font size = "2">听会音乐：</font>
-	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 
-			src="//music.163.com/outchain/player?type=3&id=2496610808&auto=0&height=32"></iframe>
-</body>
-</html>
+<meta http-equiv="refresh" content="10;url= http://dbg9.github.io/ ">
